# occutils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  renovate.json  tsconfig.json  vcpkg-configuration.json  vcpkg.json
.changeset/: config.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: clean-cache.yml  quality.yml  release.yml
cmake/: internal_utils.cmake  occutils-config.cmake.in  occutils-cpack.cmake  occutils_internal_utils.cmake
include/occutils/: occutils-axis.h  occutils-boolean.h  occutils-bounding-box.h  occutils-compound.h  occutils-curve.h  occutils-curves.h  occutils-direction.h  occutils-edge.h  occutils-equality.h  occutils-exceptions.h  occutils-extended-step.h  occutils-extended-xcaf.h  occutils-face.h  occutils-fillet.h  occutils-io.h  occutils-io.hxx  occutils-ldom.h  occutils-line.h  occutils-list-utils.h  occutils-pipe.h  occutils-plane.h  occutils-point.h  occutils-primitive.h  occutils-print-occ.h  occutils-shape-components.h  occutils-shape.h  occutils-shapes.h  occutils-step-export.h  occutils-surface.h  occutils-wire.h
include/occutils/xcaf/: occutils-xcaf-application.h  occutils-xcaf-material.h  occutils-xcaf-shape.h
include/occutils/xde/: occutils-xde-app.h  occutils-xde-doc.h  occutils-xde-material.h  occutils-xde-shape.h
scripts/: changelog.ts  version-bump.ts
scripts/utils/: changelog-utils.ts  changeset-utils.ts  package-json.ts
src/: occutils-all.cc  occutils-axis.cc  occutils-boolean.cc  occutils-bounding-box.cc  occutils-compound.cc  occutils-curve.cc  occutils-direction.cc  occutils-edge.cc  occutils-equality.cc  occutils-extended-step.cc  occutils-extended-xcaf.cc  occutils-face.cc  occutils-fillet.cc  occutils-io.cc  occutils-ldom.cc  occutils-line.cc  occutils-pipe.cc  occutils-plane.cc  occutils-point.cc  occutils-primitive.cc  occutils-print-occ.cc  occutils-shape-components.cc  occutils-shape.cc  occutils-step-export.cc  occutils-surface.cc  occutils-wire.cc
src/xcaf/: occutils-xcaf-application.cc
src/xde/: occutils-xde-app.cc  occutils-xde-doc.cc
test/: CMakeLists.txt
test/cmake/: internal_utils.cmake  occutils_internal_utils.cmake
test/data/ldom/: library.xml  library.xsd
test/src/: occutils-test-all.cc  occutils-test-bounding-box.cc  occutils-test-ldom.cc  occutils-test-line.cc  occutils-test-xcaf-application.cc
test/src/xde/: occutils-test-xde-doc.cc
tests/: TestLine.cpp
vcpkg/ports/_patch/opencascade/7.6.0/: drop-bin-letter-d.patch
vcpkg/ports/_patch/opencascade/7.6.0-old/: portfile.cmake  vcpkg.json
vcpkg/ports/opencascade/: dependencies.patch  fix-depend-vtk.patch  fix-dependence.patch  fix-find-tbb.patch  fix-pdb-find.patch  install-include-dir.patch  portfile.cmake  vcpkg.json
vcpkg/triplets/: x64-mingw-static.cmake  x64-osx.cmake
